<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:clickable="true"
    tools:context=".ResultScreenFragment">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"

        android:layout_centerInParent="true"
        android:text="@string/resultScreen_buttonText" />

    <ListView
        android:id="@+id/roundListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="100dp"
        android:background="#EEEBEB" />

    <TextView
        android:id="@+id/textView_totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/total_score"
        android:textAllCaps="false"
        android:textSize="24sp" />

</RelativeLayout>